--- a/pages/notas/notas.html
+++ b/pages/notas/notas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="notas.css">
     <title>Notas</title>
 </head>
+
 <body>
 
     <header>
@@ -18,7 +20,7 @@
             <div class="logos_RedeSocial">
                 <a href="#"><i class='bx bxl-instagram'></i></a>
                 <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-    
+
             </div>
         </div>
     </header>
@@ -29,16 +31,29 @@
                 <img src="img/FotoUSer.png" alt="">
             </div>
             <div class="DadosUsuario">
-              <a href=""><span>Visualizar Perfil</span></a>
+                <a href=""><span>Visualizar Perfil</span></a>
                 <h2>Nome da Pessoa</h2>
                 <h3>Aluno</h3>
             </div>
         </div>
     </section>
-    <div class="sidebar">
-            
-    </div>
 
-
+    <section class="container">
+        <div class="sidebar">
+            <div class="menus_sideBar">
+                <ul>
+                    <a href="#"> <li>Inicio</li></a>
+                    <a href="#"><li>Cursos</li></a>
+                    <a class="activeMenu" href="#"><li>Notas</li></a>
+                    <a href="#"><li>Professores</li></a>
+                    <a href="#"><li>Sair</li></a>
+                </ul>
+            </div>
+        </div>
+        <main>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque modi magni aliquid praesentium quis, adipisci harum voluptates tempora dicta id quibusdam rerum similique nisi odio doloribus natus facilis, ad obcaecati.</p>
+        </main>
+    </section>
 </body>
+
 </html>
