create title notas

--- a/pages/notas/notas.html
+++ b/pages/notas/notas.html
@@ -42,16 +42,33 @@
         <div class="sidebar">
             <div class="menus_sideBar">
                 <ul>
-                    <a href="#"> <li>Inicio</li></a>
-                    <a href="#"><li>Cursos</li></a>
-                    <a class="activeMenu" href="#"><li>Notas</li></a>
-                    <a href="#"><li>Professores</li></a>
-                    <a href="#"><li>Sair</li></a>
+                    <a href="#">
+                        <li>Inicio</li>
+                    </a>
+                    <a href="#">
+                        <li>Cursos</li>
+                    </a>
+                    <a href="#">
+                        <li class="activeMenu">Notas</li>
+                    </a>
+                    <a href="#">
+                        <li>Professores</li>
+                    </a>
+                    <a href="#">
+                        <li>Sair</li>
+                    </a>
                 </ul>
             </div>
         </div>
         <main>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque modi magni aliquid praesentium quis, adipisci harum voluptates tempora dicta id quibusdam rerum similique nisi odio doloribus natus facilis, ad obcaecati.</p>
+            <div class="Container_titleNotas">
+                <img src="img/imgTitle.png" alt="">
+                <div class="titleNotas">
+                    <h1>Engenharia de Software</h1>
+                    <div class="traco"></div>
+                </div>
+            </div>
+
         </main>
     </section>
 </body>
