final part nota

--- a/pages/notas/notas.html
+++ b/pages/notas/notas.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    
     <link rel="stylesheet" href="notas.css">
     <title>Notas</title>
 </head>
@@ -69,6 +70,121 @@
                 </div>
             </div>
 
+            <section class="Container_notas">
+                <div class="blocoAtividade">
+                    <div class="Cont_titleAtividade">
+                        <h3 class="titleAtivid">Atividade 01</h3>
+                    </div>
+                    <div class="cont_Pontos">
+                        <div class="PontosPossiveis">
+                            <h4>Pontos <br> possiveis:</h4>
+                            <h3>10</h3>
+                        </div>
+                        <div class="traco_veritical"></div>
+                        <div class="suaNota">
+                            <h4>Sua <br> Nota:</h4>
+                            <h3>8.4</h3>
+                        </div>
+                    </div>
+                </div> 
+                <div class="blocoAtividade">
+                    <div class="Cont_titleAtividade">
+                        <h3 class="titleAtivid">Atividade 01</h3>
+                    </div>
+                    <div class="cont_Pontos">
+                        <div class="PontosPossiveis">
+                            <h4>Pontos <br> possiveis:</h4>
+                            <h3>10</h3>
+                        </div>
+                        <div class="traco_veritical"></div>
+                        <div class="suaNota">
+                            <h4>Sua <br> Nota:</h4>
+                            <h3>8.4</h3>
+                        </div>
+                    </div>
+                </div> 
+                <div class="blocoAtividade">
+                    <div class="Cont_titleAtividade">
+                        <h3 class="titleAtivid">Atividade 01</h3>
+                    </div>
+                    <div class="cont_Pontos">
+                        <div class="PontosPossiveis">
+                            <h4>Pontos <br> possiveis:</h4>
+                            <h3>10</h3>
+                        </div>
+                        <div class="traco_veritical"></div>
+                        <div class="suaNota">
+                            <h4>Sua <br> Nota:</h4>
+                            <h3>8.4</h3>
+                        </div>
+                    </div>
+                </div> 
+                <div class="blocoAtividade">
+                    <div class="Cont_titleAtividade">
+                        <h3 class="titleAtivid">Atividade 01</h3>
+                    </div>
+                    <div class="cont_Pontos">
+                        <div class="PontosPossiveis">
+                            <h4>Pontos <br> possiveis:</h4>
+                            <h3>10</h3>
+                        </div>
+                        <div class="traco_veritical"></div>
+                        <div class="suaNota">
+                            <h4>Sua <br> Nota:</h4>
+                            <h3>8.4</h3>
+                        </div>
+                    </div>
+                </div> 
+                <div class="blocoAtividade">
+                    <div class="Cont_titleAtividade">
+                        <h3 class="titleAtivid">Atividade 01</h3>
+                    </div>
+                    <div class="cont_Pontos">
+                        <div class="PontosPossiveis">
+                            <h4>Pontos <br> possiveis:</h4>
+                            <h3>10</h3>
+                        </div>
+                        <div class="traco_veritical"></div>
+                        <div class="suaNota">
+                            <h4>Sua <br> Nota:</h4>
+                            <h3>8.4</h3>
+                        </div>
+                    </div>
+                </div> 
+                <div class="blocoAtividade">
+                    <div class="Cont_titleAtividade">
+                        <h3 class="titleAtivid">Atividade 01</h3>
+                    </div>
+                    <div class="cont_Pontos">
+                        <div class="PontosPossiveis">
+                            <h4>Pontos <br> possiveis:</h4>
+                            <h3>10</h3>
+                        </div>
+                        <div class="traco_veritical"></div>
+                        <div class="suaNota">
+                            <h4>Sua <br> Nota:</h4>
+                            <h3>8.4</h3>
+                        </div>
+                    </div>
+                </div> 
+                <div class="blocoAtividade">
+                    <div class="Cont_titleAtividade">
+                        <h3 class="titleAtivid">Atividade 01</h3>
+                    </div>
+                    <div class="cont_Pontos">
+                        <div class="PontosPossiveis">
+                            <h4>Pontos <br> possiveis:</h4>
+                            <h3>10</h3>
+                        </div>
+                        <div class="traco_veritical"></div>
+                        <div class="suaNota">
+                            <h4>Sua <br> Nota:</h4>
+                            <h3>8.4</h3>
+                        </div>
+                    </div>
+                </div> 
+                
+            </section>
         </main>
     </section>
 </body>
