--- a/pages/notas/notas.html
+++ b/pages/notas/notas.html
@@ -62,125 +62,73 @@
             </div>
         </div>
         <main>
-            <div class="Container_titleNotas">
+            <!-- <div class="Container_titleNotas">
                 <img src="img/imgTitle.png" alt="">
                 <div class="titleNotas">
-                    <h1>Engenharia de Software</h1>
+                    <h1>Ver suas notas</h1>
                     <div class="traco"></div>
                 </div>
-            </div>
+            </div> -->
 
             <section class="Container_notas">
-                <div class="blocoAtividade">
-                    <div class="Cont_titleAtividade">
-                        <h3 class="titleAtivid">Atividade 01</h3>
+                <div class="blocoAtividade2">
+                    <div class="img_notas">
+                        <img src="img/imgTitle.png" alt="">
                     </div>
-                    <div class="cont_Pontos">
-                        <div class="PontosPossiveis">
-                            <h4>Pontos <br> possiveis:</h4>
-                            <h3>10</h3>
-                        </div>
-                        <div class="traco_veritical"></div>
-                        <div class="suaNota">
-                            <h4>Sua <br> Nota:</h4>
-                            <h3>8.4</h3>
-                        </div>
+                    <div class="title_verNota">
+                        <h1>Engenharia de Software</h1>
+                        <div class="traco_nota"></div>
+                        <button>Ver notas </button>
                     </div>
                 </div> 
-                <div class="blocoAtividade">
-                    <div class="Cont_titleAtividade">
-                        <h3 class="titleAtivid">Atividade 01</h3>
+                <div class="blocoAtividade2">
+                    <div class="img_notas">
+                        <img src="img/imgTitle.png" alt="">
                     </div>
-                    <div class="cont_Pontos">
-                        <div class="PontosPossiveis">
-                            <h4>Pontos <br> possiveis:</h4>
-                            <h3>10</h3>
-                        </div>
-                        <div class="traco_veritical"></div>
-                        <div class="suaNota">
-                            <h4>Sua <br> Nota:</h4>
-                            <h3>8.4</h3>
-                        </div>
+                    <div class="title_verNota">
+                        <h1>Engenharia de Software</h1>
+                        <div class="traco_nota"></div>
+                        <button>Ver notas </button>
                     </div>
                 </div> 
-                <div class="blocoAtividade">
-                    <div class="Cont_titleAtividade">
-                        <h3 class="titleAtivid">Atividade 01</h3>
+                <div class="blocoAtividade2">
+                    <div class="img_notas">
+                        <img src="img/imgTitle.png" alt="">
                     </div>
-                    <div class="cont_Pontos">
-                        <div class="PontosPossiveis">
-                            <h4>Pontos <br> possiveis:</h4>
-                            <h3>10</h3>
-                        </div>
-                        <div class="traco_veritical"></div>
-                        <div class="suaNota">
-                            <h4>Sua <br> Nota:</h4>
-                            <h3>8.4</h3>
-                        </div>
+                    <div class="title_verNota">
+                        <h1>Engenharia de Software</h1>
+                        <div class="traco_nota"></div>
+                        <button>Ver notas </button>
                     </div>
                 </div> 
-                <div class="blocoAtividade">
-                    <div class="Cont_titleAtividade">
-                        <h3 class="titleAtivid">Atividade 01</h3>
+                <div class="blocoAtividade2">
+                    <div class="img_notas">
+                        <img src="img/imgTitle.png" alt="">
                     </div>
-                    <div class="cont_Pontos">
-                        <div class="PontosPossiveis">
-                            <h4>Pontos <br> possiveis:</h4>
-                            <h3>10</h3>
-                        </div>
-                        <div class="traco_veritical"></div>
-                        <div class="suaNota">
-                            <h4>Sua <br> Nota:</h4>
-                            <h3>8.4</h3>
-                        </div>
+                    <div class="title_verNota">
+                        <h1>Engenharia de Software</h1>
+                        <div class="traco_nota"></div>
+                        <button>Ver notas </button>
                     </div>
                 </div> 
-                <div class="blocoAtividade">
-                    <div class="Cont_titleAtividade">
-                        <h3 class="titleAtivid">Atividade 01</h3>
+                <div class="blocoAtividade2">
+                    <div class="img_notas">
+                        <img src="img/imgTitle.png" alt="">
                     </div>
-                    <div class="cont_Pontos">
-                        <div class="PontosPossiveis">
-                            <h4>Pontos <br> possiveis:</h4>
-                            <h3>10</h3>
-                        </div>
-                        <div class="traco_veritical"></div>
-                        <div class="suaNota">
-                            <h4>Sua <br> Nota:</h4>
-                            <h3>8.4</h3>
-                        </div>
+                    <div class="title_verNota">
+                        <h1>Engenharia de Software</h1>
+                        <div class="traco_nota"></div>
+                        <button>Ver notas </button>
                     </div>
                 </div> 
-                <div class="blocoAtividade">
-                    <div class="Cont_titleAtividade">
-                        <h3 class="titleAtivid">Atividade 01</h3>
+                <div class="blocoAtividade2">
+                    <div class="img_notas">
+                        <img src="img/imgTitle.png" alt="">
                     </div>
-                    <div class="cont_Pontos">
-                        <div class="PontosPossiveis">
-                            <h4>Pontos <br> possiveis:</h4>
-                            <h3>10</h3>
-                        </div>
-                        <div class="traco_veritical"></div>
-                        <div class="suaNota">
-                            <h4>Sua <br> Nota:</h4>
-                            <h3>8.4</h3>
-                        </div>
-                    </div>
-                </div> 
-                <div class="blocoAtividade">
-                    <div class="Cont_titleAtividade">
-                        <h3 class="titleAtivid">Atividade 01</h3>
-                    </div>
-                    <div class="cont_Pontos">
-                        <div class="PontosPossiveis">
-                            <h4>Pontos <br> possiveis:</h4>
-                            <h3>10</h3>
-                        </div>
-                        <div class="traco_veritical"></div>
-                        <div class="suaNota">
-                            <h4>Sua <br> Nota:</h4>
-                            <h3>8.4</h3>
-                        </div>
+                    <div class="title_verNota">
+                        <h1>Engenharia de Software</h1>
+                        <div class="traco_nota"></div>
+                        <button>Ver notas </button>
                     </div>
                 </div> 
                 
