page detail curso complete

--- a/pages/detalhes_cursos/detalheCursos.html
+++ b/pages/detalhes_cursos/detalheCursos.html
@@ -73,9 +73,12 @@
             <section class="Container_notas">
                 <div class="blocoAtividade2">
                    <div class="acordion">
-                       <button type="button" class="acordion_button">Expand content</button>
+                       <button type="button" class="acordion_button">Atividades em Aberto</button>
                        <div class="acordion_content">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam ab saepe molestias, quas vitae pariatur quia aspernatur fuga velit numquam! Eligendi voluptas molestias commodi alias rerum quod quisquam harum. Sequi?</p>
+                           <div class="disponiveis">
+                               <a href="#"> AVA Disponivel</a>
+                               <a href="#"> Exercicio avaliativo</a>
+                           </div>
 
                        </div>
                    </div>
@@ -85,6 +88,7 @@
             </section>
         </main>
     </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
