finalizando a parte de pergunta do professor

--- a/professor/index.html
+++ b/professor/index.html
@@ -82,6 +82,58 @@
             </div>
         </div>
             <main>
+                <div class="title-container">
+                    <div class="title-atividade">
+                        <h2><span>Atividade 05 - </span> termos de Entrada e saída</h2>
+                        <h3>Engenharia de Software</h3>
+                        <small>ativo</small>
+                    </div>
+                    <div class="button-editar">
+                        <button>Editar</button>
+                    </div>
+                </div>
+
+                <div class="traco"></div>
+
+                <section class="container-perg">
+                    <div class="pergunta">
+                        <div class="sum-pergunta">
+                            <h1> 01 - Pergunta</h1>
+                            <div class="button-editar">
+                                <button>Editar</button>
+                            </div>
+                        </div>
+                        <div class="title-pergunta">
+                            <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+                        </div>
+                        <ol type="A" >
+                            <li> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to </li>
+                            <li> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to </li>
+                            <li> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to </li>
+                        </ol>
+                    </div>
+                <div class="traco"></div>
+                <div class="pergunta">
+                    <div class="sum-pergunta">
+                        <h1> 02 - Pergunta</h1>
+                        <div class="button-editar">
+                            <button>Editar</button>
+                        </div>
+                    </div>
+                    <div class="title-pergunta">
+                        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h5>
+                    </div>
+                    <ol type="A" >
+                        <li> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to </li>
+                        <li> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to </li>
+                        <li> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to </li>
+                    </ol>
+                </div>
+                </section>
+
+                <footer>
+                    <p>footer</p>
+                </footer>
                 <!-- preencher sua parte aqui! -->
             </main>
     </section>
